changes from period 3-23/7/2003 (disk failure)

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/ack.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/ack.html
@@ -7,7 +7,8 @@
 
 <h2>Acknowledgements</h2>
 
-<p>TOPCAT and the classes on which it relies have mostly been written by
+<p>TOPCAT and the table-handling classes on which it relies have
+mostly been written by
 <a href="http://www.star.bristol.ac.uk/~mbt/">Mark Taylor</a> in 
 <a href="http://www.star.bristol.ac.uk/>Bristol astrophysics group</a> 
 for the <a href="http://www.starlink.ac.uk/">Starlink</a> project.
@@ -21,7 +22,8 @@ following pre-existing tools:
     (VO-India)
 </ul>
 
-<p>The following libraries provide important bits of its functionality:
+<p>Apart from the J2SE itself, the following external libraries provide 
+important bits of its functionality:
 <ul>
 <li><a href="http://ptolemy.eecs.berkeley.edu/java/ptplot5.2/ptolemy/plot/doc/index.htm">Ptplot</a>
     (Ptolemy) for plotting
@@ -35,12 +37,13 @@ comments (apologies for any missed out):
 <li>Clive Page (AstroGrid, Leicester)
 <li>David Giaretta (Starlink, RAL)
 <li>Malcolm Currie (Starlink, RAL)
+<li>Clive Davenhall (Royal Observatory Edinburgh)
 <li>Peter Draper (Starlink, Durham)
 <li>Alasdair Allan (Starlink, Exeter)
 <li>Tim Jenness (JACH)
 <li>Roy Platon (RAL)
 <li>Norman Gray (Starlink, Glasgow)
-<li>Jonathon Irwin (Cambridge)
+<li>Jonathan Irwin (Cambridge)
 <li>Mark Allen (Strasbourg)
 <li>Bob Mann (Edinburgh/Strasbourg)
 </ul>
