--- a/topcat/src/resources/uk/ac/starlink/topcat/help/browser.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/browser.html
@@ -108,7 +108,7 @@ right-clicking on the index column (grey header column at the left)
 
 <dt>Mirage</dt>
 <dd>Depending on configuration, it may be possible to launch 
-    the external application Mirage from the <kbd>Launch</kdb> menu.
+    the external application Mirage from the <kbd>Launch</kbd> menu.
     See <a href="mirage.html#launch">Launching Mirage</a>.
 
 </dl>
@@ -126,18 +126,18 @@ Each operates on the column where the click was made:
     defined in terms of its values) will be unaffected.  The column
     cannot be undeleted.
 
-<dt>Sort up</h4>
+<dt>Sort up
 <dd>Sort in ascending order.
     The rows in the table will be re-ordered so that the row with the
     lowest values in the selected column are nearest the top of the table.
     The original row number of each row will be displayed in the 
     'row header' on the left of the window.
 
-<dt>Sort down</h4>
+<dt>Sort down
 <dd>Sort in descending order.
     Like <strong>Sort up</strong> but reversed.
 
-<dt>Unsort</h4>
+<dt>Unsort
 <dd>By right clicking on the 'row header' down 
 
 </dl>
