--- a/topcat/src/resources/uk/ac/starlink/topcat/help/io.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/io.html
@@ -70,7 +70,7 @@ section on <a href="invoke.html">Invoking TOPCAT</a>.
 <li><a href="fits-read.html">FITS</a>
 <li><a href="votable-read.html">VOTable</a>
 <li><a href="jdbc-read.html">SQL Database</a>
-<li><a href="wdc-read.html">WDC</a>
+<li><a href="wdc-read.html">World Data Centre format</a>
 </ul>
 
 <h3><a name="write"></a>Saving tables</h3>
@@ -126,8 +126,9 @@ should be output in this case.
 <ul>
 <li><a href="fits-write.html">FITS</a>
 <li><a href="votable-write.html">VOTable</a>
-<li><a href="text-write.html">Text</a>
 <li><a href="jdbc-write.html">SQL Database</a>
+<li><a href="text-write.html">Text</a>
+<li><a href="latex-write.html">LaTeX</a>
 <li><a href="mirage.html">Mirage</a>
 </ul>
 
