--- a/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
@@ -24,12 +24,31 @@ data developed by <a href="http://www.starlink.ac.uk/">Starlink</a>.
 </dl>
 
 
-<h3>Version 0.3b (4 June 2003)</h3>
+<h3>Version 0.4-1b (10 July 2003)</h3>
 
-<p>This is beta software.  It works reasonably well and 
-has enough functionality to be useful,
-but it has not been rigorously tested and needs additional functions,
-some improvements to the user interface and so on.
+<p>This is beta software.
+
+<h4>Changes from 0.4b (8 July 2003)</h4>
+<ul>
+<li>Fixed a VOTable output bug (not escaping XML special characters).
+<li>Fixed a serious FITS output bug.
+<li>Improved bad value handling for FITS tables.
+</ul>
+
+<h4>Changes from v0.3b (4 June 2003) to v0.4b</h4>
+<ul>
+<li>Row subset count column in subsets window.
+<li>Fixed and improved broken Parameter window.
+<li>Fixed output of table name and parameters.
+<li>Output to LaTeX <tt>tabular</tt> environment now available.
+<li>SQL access buttons now greyed out when no JDBC drivers are present.
+<li>UCD selection now available from New Synthetic Column dialogue.
+<li>Column metadata display made more logical and flexible.
+<li>Column cardinality now calculated in Stats window.
+<li>Sythetic column expressions and most other column metadata now editable.
+<li>Null value support in evaluated expressions.
+</ul>
+
 
 
 </body>
