--- a/topcat/src/resources/uk/ac/starlink/topcat/help/script.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/script.html
@@ -51,7 +51,7 @@ tuning and debugging; a full list can be seen by doing
 for this is for defining JDBC drivers, for instance
 <pre>
    topcat -Djdbc.drivers=org.postgresql.Driver
-<pre>
+</pre>
 (the named driver would need to be on the classpath as well for this
 to allow access to PostgreSQL databases).  Another way of defining
 system properties is to put the definitions in a file called 
