--- a/topcat/src/resources/uk/ac/starlink/topcat/help/subsets-win.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/subsets-win.html
@@ -59,7 +59,7 @@ are as follows:
     the selected subset.  You can either accept it as is, or 
     modify some of the fields.
 
-<dt><img src-"../images/ab3.gif">Count Subsets
+<dt><img src="../images/ab3.gif">Count Subsets
 <dd>Counts how many rows are in each subset and displays this in the
     'size' columns.  This forces a count or recount to fill in or
     update these values.
