--- a/topcat/src/resources/uk/ac/starlink/topcat/help/tablecopy.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/tablecopy.html
@@ -71,7 +71,7 @@ to a FITS binary table:
         -ofmt fits
         "jdbc:mysql://localhost/astro1#SELECT ra, dec, Imag, Kmag FROM dqc"
         wfslist.cat
-<pre>
+</pre>
 </ul>
 
 </body>
