--- a/topcat/src/resources/uk/ac/starlink/topcat/help/votable-read.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/votable-read.html
@@ -9,7 +9,7 @@
 <h4>Reading VOTables</h4>
 
 <p>It should be possible to read any table which conforms to the 
-<a href="//cdsweb.u-strasbg.fr/doc/VOTable/votable-1-0.htx">VOTable 1.0
+<a href="http://cdsweb.u-strasbg.fr/doc/VOTable/votable-1-0.htx">VOTable 1.0
 specification</a>.  This includes tables in which the cell data is
 included in-line as XML elements (TABLEDATA format),
 or included/referenced as a FITS table (FITS format)
