--- a/topcat/src/resources/uk/ac/starlink/topcat/help/windows.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/windows.html
@@ -14,7 +14,7 @@ soon as a table is loaded, but others can be popped up by using
 the items in the <kbd>Windows</kbd> menu or the corresponding buttons in the
 toolbar.
 
-<h3></a>Common Features</h3>
+<h3>Common Features</h3>
 
 <p>Some features are shared by many of the windows:
 
@@ -45,7 +45,7 @@ All toolbars have the following buttons:
 <p>The windows have a menu at the top containing various options 
 representing actions that the window can carry out.  In most cases,
 actions which can be carried out using the toolbars or in other ways
-can be done from a menu too.  All windows have the following menu
+can be done from a menu too.  Most windows have the following menu
 items:
 
 <dl>
@@ -62,6 +62,10 @@ items:
 <dt>About
 <dd>The <kbd>About</kbd> item in the <kbd>Help</kbd> menu
     will pop up a short message about the TOPCAT application.
+
+<dt>Display
+<dd>The <kbd>Display</kbd> menu appears in most windows which contain
+    a JTable - see the <a href="#jtable">next subsection</a>.
 </dl>
 
 
@@ -104,6 +108,13 @@ used provides a common look and feel.
     and select an extra set without deselecting an existing selection
     by keeping the 'control' key pressed down while you do it.
 </dl>
+
+In most cases where a JTable is displayed, there will be a menu
+on the menu bar called <kbd>Display</kbd>.
+This permits you to select which columns are visible and which are hidden.
+Clicking on the menu will give you a list of all the available columns
+in the table, each with a checkbox by it; click the box to toggle
+whether the column is displayed or not.
 
 
 </body>
