--- a/topcat/src/resources/uk/ac/starlink/topcat/help/ack.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/ack.html
@@ -10,7 +10,7 @@
 <p>TOPCAT and the table-handling classes on which it relies have
 mostly been written by
 <a href="http://www.star.bristol.ac.uk/~mbt/">Mark Taylor</a> in 
-<a href="http://www.star.bristol.ac.uk/>Bristol astrophysics group</a> 
+<a href="http://www.star.bristol.ac.uk/">Bristol astrophysics group</a> 
 for the <a href="http://www.starlink.ac.uk/">Starlink</a> project.
 
 <p>Inspiration for many of its features has been taken from the
