Overhaul of I/O documentation, providing improvements in general and documentation for the node browser in particular.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/browser.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/browser.html
@@ -22,7 +22,7 @@ the following buttons:
 <dt><img src="../images/Open24.gif">Open
 <dd>Open a new table in a new browser window.  
     Also available as the <kbd>Open</kbd> item in the <kbd>File</kbd> menu.
-    See the section on <a href="io.html#read">Loading tables</a>.
+    See the section on <a href="read.html">Loading tables</a>.
 
 <dt><img src="../images/Copy24.gif">Duplicate
 <dd>Open a new browser window holding a copy of the currently visible table.
@@ -35,7 +35,7 @@ the following buttons:
 <dt><img src="../images/Save24.gif">Save
 <dd>Write the table currently visible in the browser window to a file.
     Also available as the <kbd>Save</kbd> item in the <kbd>File</kbd> menu.
-    See the section on <a href="io.html#write">Saving tables</a>.
+    See the section on <a href="write.html">Saving tables</a>.
 
 <dt><img src="../images/tablemeta0.gif">Parameters Window
 <dd>Displays the <a href="param.html">Parameters Window</a>, 
