--- a/topcat/src/resources/uk/ac/starlink/topcat/help/direct.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/direct.html
@@ -35,5 +35,12 @@ just use "<tt>wherever/topcat-full.jar</tt>"
 rather than "<tt>starjava/lib/topcat/topcat.jar</tt>"
 in the above examples.
 
+<p>The available memory can usually be changed from the command line using
+the -Xmx flag, for instance:
+<pre>
+   java -Xmx512M -jar topcat.jar whopper.fits
+</pre>
+would open the table "whopper.fits" in TOPCAT with 512 Megabyts to play with.
+
 </body>
 </html>
