--- a/topcat/src/resources/uk/ac/starlink/topcat/help/script.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/script.html
@@ -14,7 +14,7 @@ the Starlink java <tt>bin</tt> directory just called
    topcat
 </pre>
 Invoked with no arguments, this will pop up the 
-"<a href="io.html#read">Open Table</a>" dialogue window.
+"<a href="read.html">Open Table</a>" dialogue window.
 
 <p>Alternatively, you can supply command-line arguments giving the
 name(s) of one or more tables to load - 
