--- a/topcat/src/resources/uk/ac/starlink/topcat/help/synthetic.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/synthetic.html
@@ -83,7 +83,7 @@ edited once the column has been created.
 
 <p>Once created, a synthetic column behaves just like any other; it can
 be moved, deleted, used in expressions for other synthetic columns
-and so on.  If the table is <a href="io.html#save">saved</a>,
+and so on.  If the table is <a href="write.html">saved</a>,
 this column and its contents will be written to the new output
 table.
 
