--- a/topcat/src/resources/uk/ac/starlink/topcat/help/tablecopy.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/tablecopy.html
@@ -9,7 +9,8 @@
 
 <p>By loading a table in one format and saving it to another
 format it is possible to use TOPCAT to convert tabular data between
-supported formats (see the <a href="io.html">I/O</a> section for
+supported formats (see the sections on <a href="read.html">loading</a> 
+and <a href="write.html">saving</a> for
 descriptions of which formats are supported for input and output).
 
 <p>However, if this is all that you want to do, there is a a
