Added integral demo data, available from load dialogue.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/load-node.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/load-node.html
@@ -91,5 +91,12 @@ not sure where.  Note that this may be time-consuming - a busy
 cursor is displayed while the search is going on.
 Changing the root of the tree will interrupt the search.
 
+<h5>Browser Demo</h5>
+
+<p>You can see a demonstration of the hierarchy browser working from
+the "Open Table" dialogue box; use the <img src="../images/demo.gif"> button
+or equivalently the <kbd>Browse Example Hierarchy</kbd>
+item in the <kbd>Examples</kbd> menu.
+
 </body>
 </html>
