--- a/topcat/src/resources/uk/ac/starlink/topcat/help/read.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/read.html
@@ -56,5 +56,20 @@ a table, you will have to run TOPCAT with an increased
 memory heap size as described in the
 section on <a href="invoke.html">Invoking TOPCAT</a>.
 
+<h4>Example Tables</h4>
+
+<p>Some example table data is provided with TOPCAT.
+<ul>
+<li>To load an example table you can use the <kbd>Load Example Table</kbd>
+    item in the <kbd>Examples</kbd> menu.
+<li>The <kbd>Browse Example Hierarchy</kbd> item in that menu, or equivalently
+    the <img src="../images/demo.gif"> button in the toolbar, will
+    show you a hierarchy browser with a number of example tables of different
+    kinds, including some stored within a tar archive.  This option is
+    designed to show some of the organisational complexity which TOPCAT 
+    can handle when loading tables.
+</ul>
+
+
 </body>
 </html>
