--- a/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
@@ -47,6 +47,8 @@ data developed by <a href="http://www.starlink.ac.uk/">Starlink</a>.
 <li>Column cardinality now calculated in Stats window.
 <li>Sythetic column expressions and most other column metadata now editable.
 <li>Null value support in evaluated expressions.
+<li>Integral example data provided.
+<li>Hierarchical browser for tables available in load dialogue.
 </ul>
 
 
