--- a/topcat/src/resources/uk/ac/starlink/topcat/help/intro.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/intro.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1><img src="../images/tc3.gif">&nbsp;&nbsp;TOPCAT&nbsp;&nbsp;<a href="http://www.starlink.ac.uk/"><img src="../images/starlinklogo3.gif" border="0"></a></h1>
+<h1><a href="http://www.starlink.ac.uk/topcat/"><img src="../images/tc3.gif" border="0"></a>&nbsp;&nbsp;TOPCAT&nbsp;&nbsp;<a href="http://www.starlink.ac.uk/"><img src="../images/starlinklogo3.gif" border="0"></a></h1>
 <h2><u>T</u>ool for <u>OP</u>erations on <u>C</u>atalogues 
     <u>A</u>nd <u>T</u>ables</h2>
 
