--- a/topcat/src/resources/uk/ac/starlink/topcat/help/load-node.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/load-node.html
@@ -10,6 +10,9 @@
 <p>By clicking the <kbd>Browse Hierarchy</kbd> button in the "Open Table"
 dialogue box, you can obtain a browser which presents a table-aware 
 hierarchical view of the file system.
+(Note that a freestanding version of this panel with additional
+functionality is available in the separate
+(<a href="http://www.starlink.ac.uk/treeview/">Treeview</a> application).
 
 <p>This browser resembles the <a href="load-file.html">File Browser</a>
 in some ways, but with important differences:
