--- a/topcat/src/resources/uk/ac/starlink/topcat/help/ack.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/ack.html
@@ -46,6 +46,7 @@ comments (apologies for any missed out):
 <li>Jonathan Irwin (Cambridge)
 <li>Mark Allen (Strasbourg)
 <li>Bob Mann (Edinburgh/Strasbourg)
+<li>Mike Read (ROE)
 </ul>
 
 
