--- a/topcat/src/resources/uk/ac/starlink/topcat/help/direct.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/direct.html
@@ -38,9 +38,9 @@ in the above examples.
 <p>The available memory can usually be changed from the command line using
 the -Xmx flag, for instance:
 <pre>
-   java -Xmx512M -jar topcat.jar whopper.fits
+   java -Xmx512M -jar topcat.jar whopper.xml
 </pre>
-would open the table "whopper.fits" in TOPCAT with 512 Megabyts to play with.
+would open the table "whopper.xml" in TOPCAT with 512 Megabytes to play with.
 
 </body>
 </html>
