--- a/topcat/src/resources/uk/ac/starlink/topcat/help/script.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/script.html
@@ -37,9 +37,9 @@ in memory this may not be enough.  If running TOPCAT gives you
 an <tt>OutOfMemoryError</tt> then you can try increasing this 
 value with the "-Xmx" flag.  For instance the following:
 <pre>
-   topcat -Xmx512M whopper.fits
+   topcat -Xmx512M whopper.xml
 </pre>
-would open the table "whopper.fits" in TOPCAT with 512 Megabytes to play with.
+would open the table "whopper.xml" in TOPCAT with 512 Megabytes to play with.
 
 <p>Most of the other -X flags are only of interest for performance 
 tuning and debugging; a full list can be seen by doing
