--- a/topcat/src/resources/uk/ac/starlink/topcat/help/tablecopy.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/tablecopy.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h2>Command-line table copying</h2>
+<h2>Tablecopy command-line tool</h2>
 
 <p>By loading a table in one format and saving it to another
 format it is possible to use TOPCAT to convert tabular data between
