--- a/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
@@ -24,9 +24,27 @@ data developed by <a href="http://www.starlink.ac.uk/">Starlink</a>.
 </dl>
 
 
-<h3>Version 0.4-1b (10 July 2003)</h3>
+<h3>Version 0.5b (20 Oct 2003)</h3>
 
 <p>This is beta software.
+
+<h4>Changes from 0.4-1b (10 July 2003)</h4>
+
+<ul>
+<li>Can now read plain text format tables.
+<li>FITS files of arbitrary size can now be read 
+    (they are not loaded into memory).
+<li>TOPCAT can now run without errors in a secure environment 
+    (e.g. as an unsigned jar file under WebStart).  Of course some actions
+    such as Save Table are unavailable in this context.
+<li>Files compressed with Unix compress now work (as well as gzip and bzip2).
+<li>Added hierarchy browser to load dialog.
+<li>Added integral demo data (accessible from load dialog).
+<li>Can now drag tables from
+    <a href="http://www.starlink.ac.uk/treeview/">Treeview</a> 
+    into TOPCAT load dialog (or load button).
+<li>Some bugfixes.
+</ul>
 
 <h4>Changes from 0.4b (8 July 2003)</h4>
 <ul>
