Added extensible expressions.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/colinfo.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/colinfo.html
@@ -6,7 +6,7 @@
 <body>
 
 
-<h3>Columns Window</h3>
+<h3><img src="../images/colmeta0.gif">&nbsp;Columns Window</h3>
 
 <p>The Columns Window displays a <a href="windows.html#jtable">JTable</a> 
 giving all the information (<dfn>metadata</dfn>)
