--- a/topcat/src/resources/uk/ac/starlink/topcat/help/help.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/help.html
@@ -6,7 +6,7 @@
 <body>
 
 
-<h3>Help Window</h3>
+<h3><img src="../images/Help3.gif">&nbsp;Help Window</h3>
 
 <p>A browser for displaying help information on TOPCAT.
 It is probably the window in which you are seeing this text.
