--- a/topcat/src/resources/uk/ac/starlink/topcat/help/plot.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/plot.html
@@ -6,7 +6,7 @@
 <body>
 
 
-<h3>Plot Window</h3>
+<h3><img src="../images/plot0.gif">&nbsp;Plot Window</h3>
 
 <p>The plot window allows you to plot the values in two table 
 columns against each other.  The window is composed of several parts.
