--- a/topcat/src/resources/uk/ac/starlink/topcat/help/stats.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/stats.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h3>Statistics Window</h3>
+<h3><img src="../images/sigma0.gif">&nbsp;Statistics Window</h3>
 
 <p>The Statistics Window can display statistics for the values in each
 of the table's columns.  The calculated values are displayed in a
