--- a/topcat/src/resources/uk/ac/starlink/topcat/help/subsets-win.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/subsets-win.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h3>Subsets Window</h3>
+<h3><img src="../images/venn2.gif">&nbsp;Subsets Window</h3>
 
 <p>The Subsets Window displays the <a href="subsets.html">Row Subsets</a>
 which have been defined. 
