--- a/topcat/src/resources/uk/ac/starlink/topcat/help/param.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/param.html
@@ -6,7 +6,7 @@
 <body>
 
 
-<h3>Table Metadata Window</h3>
+<h3><img src="../images/tablemeta0.gif">&nbsp;Table Metadata Window</h3>
 
 <p>This window displays any metadata which describes the table as a whole,
 for instance its name, dimensions and any other parameters known.
