Added some recent features to the list.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
@@ -23,12 +23,15 @@ data developed by <a href="http://www.starlink.ac.uk/">Starlink</a>.
 
 </dl>
 
+<h3>Version 0.5-1 (18 November 2003)</h3>
 
-<h3>Version 0.5b (20 Oct 2003)</h3>
+<ul>
+<li>Rewrite of FITS binary table access for big efficiency improvements.
+<li>It's now possible to plug in user-defined algebraic methods at runtime.
+<li>Improved unit testing leads to some bugfixes.
+</ul>
 
-<p>This is beta software.
-
-<h4>Changes from 0.4-1b (10 July 2003)</h4>
+<h4>Version 0.5b (20 October 2003)</h4>
 
 <ul>
 <li>Can now read plain text format tables.
@@ -46,14 +49,14 @@ data developed by <a href="http://www.starlink.ac.uk/">Starlink</a>.
 <li>Some bugfixes.
 </ul>
 
-<h4>Changes from 0.4b (8 July 2003)</h4>
+<h4>Version 0.4-1b (10 July 2003)</h4>
 <ul>
 <li>Fixed a VOTable output bug (not escaping XML special characters).
 <li>Fixed a serious FITS output bug.
 <li>Improved bad value handling for FITS tables.
 </ul>
 
-<h4>Changes from v0.3b (4 June 2003) to v0.4b</h4>
+<h4>Version 0.4b (8 July 2003)</h4>
 <ul>
 <li>Row subset count column in subsets window.
 <li>Fixed and improved broken Parameter window.
@@ -68,6 +71,8 @@ data developed by <a href="http://www.starlink.ac.uk/">Starlink</a>.
 <li>Integral example data provided.
 <li>Hierarchical browser for tables available in load dialogue.
 </ul>
+
+<h4>Version 0.3b (4 June 2003) - first public release</h4>
 
 
 
