Updated docs to reflect a change that happened a while back.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/synthetic.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/synthetic.html
@@ -76,10 +76,9 @@ pieces of information for the new column you will create:
 
 
 <p>If you wish to add more metadata items you can edit the appropriate
-cells in the Column Metadata Window grid (<em>though not all such
-cells are currently editable</em>).
-The expression associated with a synthetic column cannot currently be
-edited once the column has been created.
+cells in the Column Metadata Window grid (double-click on a cell to 
+edit it).  You can change the expression of an existing synthetic
+column in the same way.
 
 <p>Once created, a synthetic column behaves just like any other; it can
 be moved, deleted, used in expressions for other synthetic columns
