Added documentation for HTML output handler.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/save-formats.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/save-formats.html
@@ -13,6 +13,7 @@
 <li><a href="votable-write.html">VOTable</a>
 <li><a href="jdbc-write.html">SQL Database</a>
 <li><a href="text-write.html">Text</a>
+<li><a href="html-write.html">HTML</a>
 <li><a href="latex-write.html">LaTeX</a>
 <li><a href="mirage.html">Mirage</a>
 </ul>
